assets/css/style.css
/* Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@500;700&display=swap");

/* Resetting Styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

ul,
ol {
  list-style: none;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: inherit;
}

input:focus,
textarea:focus,
button:focus,
select:focus {
  outline: none;
}

fieldset {
  border: none;
}

.hidden-heading {
  display: none;
}

/* Body Styles */
body {
  scroll-behavior: smooth;
  position: relative;
  overflow-x: hidden;
  font-family: "Poppins", sans-serif;
  box-sizing: border-box;
}

/* Main, Header, Eligibility-page-form and Footer container Styles */
main,
header,
#eligibility-page-form,
.footer-container {
  max-width: 1400px;
  margin: 0 auto;
  padding: 0 20px;
}

/* Nav Styles */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 0;
}

.logo h1 {
  display: inline-block;
  margin-left: 15px;
  color: #131313;
  text-decoration: none;
  font-weight: 600;
  font-size: 1.25rem;
}

.fa-paw {
  color: #a7244e;
  transition: transform 0.5s ease;
}

.logo:hover .fa-solid.fa-paw {
  transform: rotate(45deg);
}

.nav-links {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-links ul {
  padding: 15px;
  display: flex;
  align-items: center;
  list-style-type: none;
}

.nav-links ul li a {
  text-decoration: none;
  color: #131313;
  margin-right: 20px;
}

.nav-links ul li .active {
  color: #a7244e;
  font-weight: 500;
}

.nav-links ul li a:hover {
  color: #a7244e;
  transition: all 0.1s ease;
}

.nav-links ul li .eligibility-nav-btn {
  background-color: #a7244e;
  color: white;
  border: none;
  padding: 13px 25px;
  border-radius: 50px;
  font-size: 0.95rem;
}

.nav-links ul li .eligibility-nav-btn:hover {
  background-color: #131313;
  color: white;
  cursor: pointer;
  transition: all 0.2s ease;
}

#nav-toggle {
  display: none;
}

.nav-toggle-label {
  margin-right: 12px;
  display: none;
}

.nav-toggle-label span {
  visibility: hidden;
  font-size: 0.1px;
  width: 0;
  height: 0;
}

/* Header Styles */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  position: fixed;
  width: 100%;
  background-color: #fff;
  z-index: 1000;
}

#hero-section {
  padding-top: 140px;
  max-width: 1400px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hero-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60%;
  height: 100%;
}

.hero-img {
  width: 600px;
  height: 600px;
  object-fit: contain;
}

.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero-content h2 {
  font-size: 2.5rem;
  margin-bottom: 0px;
}

.hero-content h2,
.hero-content p {
  max-width: 600px;
  text-align: center;
}

.hero-content h2 {
  margin-top: 0;
  margin-bottom: 60px;
  font-size: 2.5rem;
  position: relative;
}

.hero-underline {
  position: absolute;
  width: 270px;
  bottom: -40px;
  right: 92px;
}

.hero-content p {
  margin-bottom: 25px;
}

.hero-about-us-btn {
  border: none;
  padding: 15px 40px;
  color: white;
  background-color: #a7244e;
  font-size: 1.1rem;
  border-radius: 50px;
}

.hero-about-us-btn:hover {
  background-color: #131313;
  cursor: pointer;
  transition: all 0.2s ease;
}

/* Main Section */
/* Eligibility */

#eligibility {
  margin-bottom: 100px;
  overflow: hidden;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#eligibility {
  margin-bottom: 100px;
  overflow: hidden;
  width: 100%;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.eligibility-content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.eligibility-content h2,
.eligibility-content p {
  text-align: center;
  max-width: 500px;
  margin-bottom: 15px;
}

.eligibility-content h2 {
  font-size: 2.3rem;
  margin-bottom: 17px;
}

.eligibility-btn {
  border: none;
  padding: 15px 40px;
  color: white;
  background-color: #a7244e;
  font-size: 1.1rem;
  border-radius: 50px;
  margin-top: 15px;
}

.eligibility-btn:hover {
  background-color: #131313;
  cursor: pointer;
  transition: all 0.2s ease;
}

.eligibility-img-container {
  width: 50%;
  height: 100%;
}

.eligibility-img {
  object-fit: contain;
  width: 600px;
  height: 600px;
  margin-left: 70px;
}

/* Eligibility page styles  */
/* Eligibility Header */
.eligibility-page-header {
  padding-top: 120px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 80vh;
}

.eligibility-page-hero-first {
  width: 70%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.eligibility-page-hero-second {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.eligibility-page-hero-img {
  max-width: 500px;
  min-width: 350px;
  min-height: 350px;
  object-fit: contain;
}

.eligibility-page-hero-second h2 {
  position: relative;
  color: #131313;
  font-size: 4.1rem;
  margin-bottom: 40px;
}

.eligibility-page-underline {
  position: absolute;
  top: 80px;
  width: 300px;
  left: 0px;
}

.eligibility-page-hero-second p {
  text-align: center;
  max-width: 500px;
}

.eligibility-page-hero-second button {
  border: none;
  padding: 15px 40px;
  color: white;
  background-color: #a7244e;
  font-size: 1.1rem;
  border-radius: 50px;
  margin-top: 15px;
}
/* ... */

